force-app/main/default/objects/Variant__c/Variant__c.object-meta.xml
<CustomObject>
    <label>Variant</label>
    <nameField>
        <label>Variant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Variants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>