force-app/main/default/objects/Variant__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Variants</relationshipLabel>
    <relationshipName>Variants</relationshipName>
    <type>Lookup</type>
</CustomField>