force-app/main/default/objects/Variant__c/fields/ProgramMode__c.field-meta.xml
<CustomField>
    <fullName>ProgramMode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mode</label>
    <referenceTo>Mode__c</referenceTo>
    <relationshipLabel>Variants</relationshipLabel>
    <relationshipName>Variants</relationshipName>
    <type>Lookup</type>
</CustomField>