force-app/main/default/objects/Variant__c/fields/TestCode__c.field-meta.xml
<CustomField>
    <fullName>TestCode__c</fullName>
    <formula>Program__r.Program_Code__c + &apos;_&apos; + Variant_Code__c + &apos;_&apos; +   Centre__r.Centre_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TestCode</label>
    <type>Text</type>
</CustomField>