force-app/main/default/objects/Variant__c/fields/Variant_Code__c.field-meta.xml
<CustomField>
    <fullName>Variant_Code__c</fullName>
    <label>Variant Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>