force-app/main/default/objects/Variant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Variant_Code__c</columns>
    <columns>Program__c</columns>
    <columns>Centre__c</columns>
    <columns>Fees__c</columns>
    <columns>Mode__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>